Instant Address Standard/main/default/objects/Address__c/fields/Address_Reference__c.field-meta.xml
<CustomField>
    <fullName>Address_Reference__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Address Reference</label>
    <type>AutoNumber</type>
</CustomField>