Instant Address Standard/main/default/objects/Address__c/fields/encrypted__c.field-meta.xml
<CustomField>
    <fullName>encrypted__c</fullName>
    <label>encrypted</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>