Instant Address Standard/main/default/objects/Address__c/fields/Latitude_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude_Longitude__c</fullName>
    <label>Latitude And Longitude</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>