Instant Address Standard/main/default/objects/Address__c/fields/multi_picklist__c.field-meta.xml
<CustomField>
    <fullName>multi_picklist__c</fullName>
    <label>multi picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aaaaaaaaaaaaaa</fullName>
            </value>
            <value>
                <fullName>aa</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
            <value>
                <fullName>eg</fullName>
            </value>
            <value>
                <fullName>gf</fullName>
            </value>
            <value>
                <fullName>hasdasd asd asd a</fullName>
            </value>
            <value>
                <fullName>k</fullName>
            </value>
            <value>
                <fullName>klt</fullName>
            </value>
            <value>
                <fullName>v</fullName>
            </value>
            <value>
                <fullName>yikt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>