Instant Address Standard/main/default/objects/Address__c/fields/My_Email__c.field-meta.xml
<CustomField>
    <fullName>My_Email__c</fullName>
    <label>My Email</label>
    <type>Email</type>
</CustomField>