Instant Address Standard/main/default/objects/Address__c/fields/My_number__c.field-meta.xml
<CustomField>
    <fullName>My_number__c</fullName>
    <label>My number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>