Instant Address Standard/main/default/objects/Address__c/fields/picklist__c.field-meta.xml
<CustomField>
    <fullName>picklist__c</fullName>
    <label>picklist</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>uno,dos,tres,cuatro,cinco</fullName>
                <default>true</default>
                <label>uno,dos,tres,cuatro,cinco</label>
            </value>
            <value>
                <fullName>dos</fullName>
            </value>
            <value>
                <fullName>tres</fullName>
            </value>
            <value>
                <fullName>coma</fullName>
            </value>
            <value>
                <fullName>cafe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>