Instant Address Standard/main/default/objects/Address__c/fields/Week_days__c.field-meta.xml
<CustomField>
    <fullName>Week_days__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is visible</label>
    <type>Checkbox</type>
</CustomField>