Instant Address Standard/main/default/objects/Address__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <label>Zipcode</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>