Instant Address Standard/main/default/objects/Address__c/recordTypes/guest.recordType-meta.xml
<RecordType>
    <fullName>guest</fullName>
    <active>true</active>
    <label>guest</label>
</RecordType>