Instant Address Standard/main/default/objects/Address__c/recordTypes/Invitee.recordType-meta.xml
<RecordType>
    <fullName>Invitee</fullName>
    <active>true</active>
    <label>Invitee</label>
</RecordType>